# cassandra-migrate-rs

./: .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  rust-clippy.yml
cassandra-migrate-rs/: Cargo.toml
cassandra-migrate-rs-cli/: Cargo.toml
