[package]
name = "cassandra-migrate-rs"
version = "0.1.0"
authors = ["stefvic <victor.stefoglo@gmail.com>"]
edition = "2021"

description = "Provides library for Cassadnra migration"
documentation = "https://docs.rs/cassandra-migrate-rs"
homepage = "https://github.com/stefvic/cassandra-migrate-rs"
repository = "https://github.com/stefvic/cassandra-migrate-rs"
readme = "README.md"
categories = ["database"]
keywords = ["migration", "cql", "cassandra"]
license = "MIT/Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
